clean up FBUtilities patch by Jon Hermes and jbellis
git-svn-id: https://svn.apache.org/repos/asf/cassandra/branches/cassandra-0.7@1053117 13f79535-47bb-0310-9956-ffa450edef68